[project]
name = "z-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "huggingface-hub>=0.25.0",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "safetensors>=0.7.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.51.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
diffusers = { git = "https://github.com/huggingface/diffusers" }
